# cori

./: .cori_tasks.json  ARCHITECTURE.md  Cargo.toml  DESIGN.md  README.md  cori.toml.example
cori-cli/: Cargo.toml
cori-cli/src/: main.rs
cori-core/: Cargo.toml
cori-core/examples/: hello.rs
cori-core/src/: claude.rs  config.rs  context.rs  hooks.rs  lesson.rs  lib.rs  loop_.rs  loop_test.rs  permission.rs  streaming.rs  types.rs
cori-core/src/planner/: mod.rs  tests.rs
cori-core/src/tools/: bash.rs  edit.rs  fs.rs  mod.rs  subagent.rs  task.rs  tests.rs  todo.rs
cori-mcp/: Cargo.toml
cori-mcp/src/: main.rs
cori-provider/: Cargo.toml
cori-provider/src/: claude.rs  lib.rs  mock.rs  openai_compat.rs
cori-server/: Cargo.toml
cori-server/src/: main.rs
cori-tools/: Cargo.toml
cori-tools/src/: lib.rs
cori-web/: Cargo.toml
cori-web/src/: main.rs
lessons/01-agent-loop/: README.md
lessons/02-tool-dispatch/: README.md
lessons/03-real-api/: README.md
lessons/04-context/: README.md
lessons/05-planning/: README.md
lessons/06-subagents/: README.md
lessons/07-file-tools/: README.md
lessons/08-streaming/: README.md
lessons/09-edit-tool/: README.md
src/: main.rs
