[workspace]
members = [
    "cori-core",
    "cori-tools",
    "cori-provider",
    "cori-cli",
    "cori-mcp",
    "cori-server",
    "cori-web",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Binlogo"]

[workspace.dependencies]
# ── Async runtime ──────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── Serialization ──────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Error handling ─────────────────────────────────────────────────────────────
anyhow = "1"
thiserror = "2"

# ── Logging / tracing ──────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── HTTP ───────────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# ── Async trait ────────────────────────────────────────────────────────────────
async-trait = "0.1"

# ── Internal crates ────────────────────────────────────────────────────────────
cori-core     = { path = "cori-core" }
cori-tools    = { path = "cori-tools" }
cori-provider = { path = "cori-provider" }

# ── CLI ────────────────────────────────────────────────────────────────────────
# (legacy root binary kept for lesson compatibility)
[package]
name = "cori"
version.workspace = true
edition.workspace = true

[dependencies]
cori-core = { path = "cori-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
rustyline = "14"
colored = "2"
