[package]
name = "cori-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
reqwest = { workspace = true }
futures-util = { workspace = true }
async-trait = { workspace = true }
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
tracing-subscriber = { workspace = true }
