[package]
name = "cori-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cori-mcp"
path = "src/main.rs"

[dependencies]
cori-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
