[package]
name = "cori-tools"
version.workspace = true
edition.workspace = true

[dependencies]
cori-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
